--- a/ADM/alteraCadastro.html
+++ b/ADM/alteraCadastro.html
@@ -4,8 +4,227 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alterar Cadastro PET</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
-    <div><h1>Teste</h1></div>
+  <div>
+   <!-- Primeira linhas -->
+   <header>
+    <div>
+     <img src="/img/logo-acapra-roxo.png" width="40"/>
+    </div>
+    <button>
+     <span>
+      <span>
+      </span>
+     </span>
+     <span>
+      Voltar para página inicial
+     </span>
+    </button>
+   </header>
+   <div>
+    <!-- Menu -->
+    <nav>
+     <div>
+      Menu
+     </div>
+     <a>
+      <i>
+      </i>
+      <span>
+       Início
+      </span>
+     </a>
+     <br>
+     <a>
+      <i>
+      </i>
+      <span>
+       Cadastros
+      </span>
+     </a>
+    </nav>
+    <!-- Cadrastros -->
+    <main>
+     <section>
+      <h2>
+       Pets
+      </h2>
+      <div>
+       <div>
+        <img height="40" src="/img/pata-preta.png" width="40"/>
+        <span">
+         Total Cadastrados
+        </span>
+        <span>
+         12
+        </span>
+       </div>
+       <div>
+        <img height="40" src="/img/cachorro-preto.png" width="40"/>
+        <span>
+         Cachorros Cadastrados
+        </span>
+        <span>
+         8
+        </span>
+       </div>
+       <div>
+        <img height="40" src="/img/gato-preto.png" width="40"/>
+        <span>
+         Gatos Cadastrados
+        </span>
+        <span>
+         4
+        </span>
+       </div>
+       <div>
+        <button>
+         Ver cadastros
+        </button>
+        <button>
+         Novo Pet
+        </button>
+       </div>
+      </div>
+     </section>
+     <section>
+      <h2>
+       Formulários
+      </h2>
+      <div>
+       <table>
+        <thead>
+         <tr>
+          <th>
+           Data
+          </th>
+          <th>
+           Nome
+          </th>
+          <th>
+           Telefone
+          </th>
+          <th>
+           Pet
+          </th>
+          <th>
+           Status
+          </th>
+          <th>
+           Ações
+          </th>
+         </tr>
+        </thead>
+        <tbody>
+         <tr>
+          <td>
+           18/03/2025
+          </td>
+          <td>
+           Jorge da Silva
+          </td>
+          <td>
+           (47) 99999-9999
+          </td>
+          <td>
+           Pimpão
+          </td>
+          <td>
+           Entrega
+          </td>
+          <td>
+           <button>
+            ✔
+           </button>
+           <button>
+            ✖
+           </button>
+          </td>
+         </tr>
+         <tr>
+          <td>
+           19/03/2025
+          </td>
+          <td>
+           Ricardo Almeida
+          </td>
+          <td>
+           (47) 99999-9999
+          </td>
+          <td>
+           Bela
+          </td>
+          <td>
+           Aguardando
+          </td>
+          <td>
+           <button>
+            ✔
+           </button>
+           <button>
+            ✖
+           </button>
+          </td>
+         </tr>
+         <tr>
+          <td>
+           20/03/2025
+          </td>
+          <td class=>
+           Tiago Silva
+          </td>
+          <td>
+           (47) 99999-9999
+          </td>
+          <td>
+           Zeus
+          </td>
+          <td>
+           Aguardando
+          </td>
+          <td >
+           <button>
+            ✔
+           </button>
+           <button>
+            ✖
+           </button>
+          </td>
+         </tr>
+         <tr>
+          <td>
+           21/03/2025
+          </td>
+          <td class="border border-gray-400 px-1 py-1">
+           Guilherme Costa
+          </td>
+          <td>
+           (47) 99999-9999
+          </td>
+          <td>
+           Pimpão
+          </td>
+          <td>
+           Aguardando
+          </td>
+          <td>
+           <button>
+            ✔
+           </button>
+           <button>
+            ✖
+           </button>
+          </td>
+         </tr>
+        </tbody>
+       </table>
+      </div>
+     </section>
+    </main>
+   </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
