--- a/formulario.html
+++ b/formulario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario</title>
+    <title>Formulário</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,21 +12,23 @@
     />
 </head>
 <body>
-    
-<img src="/img/logoRoxa.svg" alt="">
 
-    <h1>Formulario de Adoção</h1>
+    <div class="text-center mb-4">
+        <img src="/img/logoRoxa.svg" alt="Logo ACAPRA" style="width: 60px;">
+        <h2 class="mt-2">Formulário de Adoção</h2>
+    </div>
 
-   <div class="formulario">
+   <div class="d-flex justify-content-center align-items-center min-vh-100 bg-light">
+    <div class="p-4 rounded shadow bg-white" style="width: 100%; max-width: 700px;">
 
         <label for="nome" class="form-label">Qual o seu nome completo?</label>
-            <input type="text" class="form-control" id="nome" placeholder=" Escreva seu nome">
+            <input type="text" class="form-control mb-3" id="nome" style="max-width: 400px;" placeholder=" Escreva seu nome">
 
         <label for="telefone" class="form-label">Qual o seu telefone para contato?</label>
-            <input type="text" class="form-control" id="telefone" placeholder=" (99) 99999 - 9999">
+            <input type="tel" class="form-control mb-3" id="telefone" style="max-width: 200px;" placeholder=" (99) 99999 - 9999">
 
         <label for="interesse" class="form-label">Qual animal você tem interesse em adotar?</label>
-            <input class="form-control" list="datalistOptions" id="interesse" placeholder=" Selecione...">
+            <input class="form-control mb-3" list="datalistOptions" id="interesse" style="max-width: 200px;" placeholder=" Selecione...">
             <datalist id="datalistOptions">
             <option value="Pinpão">
             <option value="Bela">
@@ -38,8 +40,8 @@
             </option>
             </datalist>
 
-        <label for="idade" class="form-label">Qual a sua idade? *Apenas maiores de idade devem responder</label>
-            <input type="text" class="form-control" id="idade" placeholder=" ** anos">
+        <label for="idade" class="form-label">Qual a sua idade? *Apenas maiores de idade devem responder!</label>
+            <input type="text" class="form-control mb-3" id="idade" style="max-width: 100px;" placeholder=" ** anos">
 
         <label for="concordam" class="form-label">Todos da sua residência, concordam com a adoção?</label>
             <div class="form-check">
@@ -50,13 +52,13 @@
             </div>
             <div class="form-check">
             <input class="form-check-input" type="radio" name="radioDefault" id="radioDefault2" checked>
-            <label class="form-check-label" for="radioDefault2">
+            <label class="form-check-label mb-3" for="radioDefault2">
             Não
             </label>
             </div>
 
         <label for="possuiAnimais" class="form-label">Você tem outros animais? Se sim, quantos e quais?</label>
-            <input type="text" class="form-control" id="possuiAnimais">
+            <input type="text" class="form-control mb-3" id="possuiAnimais" style="max-width: 500px;">
 
         <label for="vacinados" class="form-label">São castrados e vacinados? *Desconsiderar caso não possui animais</label>
             <div class="form-check-vacinado">
@@ -67,13 +69,13 @@
             </div>
             <div class="form-check-vacinado">
             <input class="form-check-input" type="radio" name="radioVacina" id="radiovacina2" checked>
-            <label class="form-check-label" for="radiovacina2">
+            <label class="form-check-label mb-3" for="radiovacina2">
                 Não
             </label>
             </div>
 
         <label for="residencia" class="form-label">Você mora em casa ou apartamento? Próprio ou alugado?</label>
-            <input type="text" class="form-control" id="residencia">
+            <input type="text" class="form-control mb-3" id="residencia" style="max-width: 500px;">
 
         <label for="telas" class="form-label">A sua residência tem telas?</label>
             <div class="form-check-telas">
@@ -84,7 +86,7 @@
             </div>
             <div class="form-check-telas">
             <input class="form-check-input" type="radio" name="radioTelas" id="radiotelas2" checked>
-            <label class="form-check-label" for="radiotelas2">
+            <label class="form-check-label mb-3" for="radiotelas2">
                 Não
             </label>
             </div>
@@ -98,11 +100,61 @@
             </div>
             <div class="form-check-passeio">
             <input class="form-check-input" type="radio" name="radioPasseio" id="radiopasseio2" checked>
-            <label class="form-check-label" for="radiopasseio2">
+            <label class="form-check-label mb-3" for="radiopasseio2">
                 Não
             </label>
             </div>
 
+        <label for="endereco" class="form-label">Qual seu endereço completo? Com rua, CEP, Nº de Casa e ponto de referência?</label>
+            <input type="text" class="form-control mb-3" id="endereco">
+
+        <label for="renda" class="form-label">Qual a sua renda?</label>
+            <input type="number" class="form-control mb-3" id="renda" style="max-width: 200px;" placeholder="R$ *.***,**">
+
+        <label for="condicoes" class="form-label">Você tem condições físicas, mentais e financeiras de manter um animal? Uma boa ração? Visitas ao veterinário? Cadastração e Passeios?</label>
+            <input type="text" class="form-control mb-3" id="condicoes">
+
+        <label for="cadastracao" class="form-label">A cadastração e vacniação do animal é OBRIGATÓRIA, você concorda com isso?</label>
+            <div class="form-check-cadastracao">
+            <input class="form-check-input" type="radio" name="radioCadastracao" id="radiocadastracao1">
+            <label class="form-check-label" for="radiocadastracao1">
+                Sim
+            </label>
+            </div>
+            <div class="form-check-cadastracao">
+            <input class="form-check-input" type="radio" name="radioCadastracao" id="radiocadastracao2" checked>
+            <label class="form-check-label mb-3" for="radiocadastracao2">
+                Não
+            </label>
+            </div>
+
+        <label for="taxa" class="form-label">Existe uma taxa de adoção colaborativa de R$30,00. Você concorda em contribuir?</label>
+            <div class="form-check-taxa">
+            <input class="form-check-input" type="radio" name="radioTaxa" id="radiotaxa1">
+            <label class="form-check-label" for="radiotaxa1">
+                Sim
+            </label>
+            </div>
+            <div class="form-check-taxa">
+            <input class="form-check-input" type="radio" name="radioTaxa" id="radiotaxa2" checked>
+            <label class="form-check-label mb-3" for="radiotaxa2">
+                Não
+            </label>
+            </div>
+
+        <label for="documentos" class="form-label mb-3"> Favor enviar os seguintes documentos:</label><br>
+            <label for="documentos" class="form-label"> *Foto do RG;</label><br>
+            <label for="documentos" class="form-label"> *Foto do comprovante de renda;</label><br>
+            <label for="documentos" class="form-label"> *Foto do local onde o animal irá ficar (terreno, casa, canil...);</label><br>
+            <label for="documentos" class="form-label"> *Foto das TELAS;</label><br>
+            <label for="documentos" class="form-label mb-3"> *Se tiver outros animais, foto dos mesmos e das suas carteiras de vacinação.</label> 
+        
+        <div class="mb-3">
+            <label for="formFile" class="form-label">Anexe os arquivos:</label>
+            <input class="form-control" type="file" id="formFile" style="max-width: 380px;">
+        </div>
+
+   </div>
    </div>
 
     <script
