--- a/detalhe.html
+++ b/detalhe.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhe de Animal</title>
+     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
 </head>
 <body>
     
+    <div class="text-center mb-4">
+        <h2 class="mt-2 mb-3">Achou seu novo companheiro???</h2>
+        <img src="/img/pinpão.png" alt="pinpão" class="shadow" style= "width:100%; max-width: 1100px;">
+    </div>
+
+    <div class="container text-center">
+        <div class="row justify-content-around">
+            <div class="col-4">
+            Campo 1
+            </div>
+            <div class="col-4">
+            Campo 2
+            </div>
+        </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
