--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <!-- Top Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-light bg-white border-bottom shadow-sm">
       <div
         class="container-fluid px-4 d-flex justify-content-between align-items-center"
@@ -25,7 +25,6 @@
         <!-- Logo -->
         <a class="navbar-brand" href="#">
           <img src="img/logoRoxa.svg" alt="Logo" width="50" />
-          <!-- Substitua com o caminho real -->
         </a>
 
         <!-- Tela Admin + Minha Conta -->
@@ -42,7 +41,7 @@
     <!-- Menu Navbar com Offcanvas -->
     <nav class="navbar navbar-expand-lg navbar-custom">
       <div class="container-fluid px-4">
-        <!-- Botão offcanvas (hamburger) -->
+        <!-- Botão offcanvas -->
         <button
           class="navbar-toggler"
           type="button"
