--- a/detalhe.html
+++ b/detalhe.html
@@ -12,27 +12,55 @@
     />
 </head>
 <body>
-    
-    <div class="text-center mb-4">
-        <h2 class="mt-2 mb-3">Achou seu novo companheiro???</h2>
-        <img src="/img/pinpão.png" alt="pinpão" class="shadow" style= "width:100%; max-width: 1100px;">
+
+    <div class="container mt-4" >
+    <h2 class="text-center fw-bold mb-4" style="color: #7874A4">Achou o seu novo companheiro???</h2>
+
+    <img src="/img/pinpão.png" alt="pinpão" class="shadow mb-5" style= "width:100%; max-width: 1100px;">
+
+    <div class="row mt-4" style="color: #7874A4">
+      <div class="col-md-6">
+        <div class="info-card">
+          <h5>Pinpão</h5>
+          <p><strong>Raça:</strong> Labrador</p>
+          <p><strong>Local:</strong> Guabiruba</p>
+          <p><strong>Idade:</strong> 4 Meses</p>
+          <p><strong>Tipo:</strong> Filhote de cachorro - Macho - Médio - Amarelo / Castanho</p>
+          <p><strong>Saúde:</strong> Vacinação em dia.</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="info-card bg-purple text-white text-center">
+          <h5 class="text-dark">Considerando Pinpão para adoção?</h5>
+          <a href="#" class="btn btn-light mt-2">Formulário de Adoção</a>
+          <a href="#" class="btn btn-light mt-2">Leia as Perguntas Frequentes</a>
+        </div>
+      </div>
     </div>
 
-    <div class="container text-center">
-        <div class="row justify-content-around">
-            <div class="col-4">
-            Campo 1
-            </div>
-            <div class="col-4">
-            Campo 2
-            </div>
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <div class="footer-box">
+            <img src="/img/como-faco-pra-adotar.png" alt="">
         </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="info-card text-center">
+          <img src="/img/icon-endereco.png" class="d-block mx-auto mb-3" style= "width:100%; max-width: 150px;"alt="">
+          <h6><strong>R. Alberto Reichert, 237 - Aimoré</strong></h6>
+          <p>Guabiruba | SC</p>
+          <p><span class="paw-icon">📍</span> Localização Endereço</p>
+        </div>
+      </div>
     </div>
+  </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
+
 </body>
 </html>
