--- a/detalhe.html
+++ b/detalhe.html
@@ -16,24 +16,22 @@
     <div class="container mt-4" >
     <h2 class="text-center fw-bold mb-4" style="color: #7874A4">Achou o seu novo companheiro???</h2>
 
-    <img src="/img/pinpão.png" alt="pinpão" class="shadow mb-5" style= "width:100%; max-width: 1100px;">
+    <img src="/img/pinpão.png" alt="pinpão" class="shadow mb-5" style= "width:100%; max-width: 1300px;">
 
     <div class="row mt-4" style="color: #7874A4">
       <div class="col-md-6">
-        <div class="info-card">
-          <h5>Pinpão</h5>
-          <p><strong>Raça:</strong> Labrador</p>
-          <p><strong>Local:</strong> Guabiruba</p>
-          <p><strong>Idade:</strong> 4 Meses</p>
-          <p><strong>Tipo:</strong> Filhote de cachorro - Macho - Médio - Amarelo / Castanho</p>
-          <p><strong>Saúde:</strong> Vacinação em dia.</p>
+            <div class="bg-white p-4 rounded shadow-sm">
+                <h5 class="mb-2">Pinpão</h5>
+                <p><strong>Labrador | Guabiruba | 4 Meses</strong> </p>
+                <hr><p><strong>Tipo:</strong> Filhote de cachorro - Macho - Médio - Amarelo / Castanho</p><hr>
+                <p><strong>Sobre</strong><br> Vacinação em dia.</p>
+            </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        <div class="info-card bg-purple text-white text-center">
-          <h5 class="text-dark">Considerando Pinpão para adoção?</h5>
-          <a href="#" class="btn btn-light mt-2">Formulário de Adoção</a>
-          <a href="#" class="btn btn-light mt-2">Leia as Perguntas Frequentes</a>
+      <div class="col-md-6" >
+        <div class="info-card bg-purple text-white text-center bg-roxo-suave p-4 rounded shadow-sm" style="background-color: #7874A4;">
+          <h5 class="text-white">Considerando Pinpão para adoção?</h5>
+          <a href="#" class="btn btn-light mt-2" style= "width:100%; max-width: 240px; border-radius: 20px; color: #7874A4"><strong>Formulário de Adoção</strong></a><br>
+          <a href="#" class="btn btn-light mt-2 text-white" style= "width:100%; max-width: 240px; border-radius: 20px; background-color: #555086;" >Leia as Perguntas Frequentes</a>
         </div>
       </div>
     </div>
@@ -41,16 +39,17 @@
     <div class="row mt-4">
       <div class="col-md-6">
         <div class="footer-box">
-            <img src="/img/como-faco-pra-adotar.png" alt="">
+            <img src="/img/como-faco-pra-adotar.png" class="d-block mx-auto">
         </div>
       </div>
 
       <div class="col-md-6">
-        <div class="info-card text-center">
-          <img src="/img/icon-endereco.png" class="d-block mx-auto mb-3" style= "width:100%; max-width: 150px;"alt="">
-          <h6><strong>R. Alberto Reichert, 237 - Aimoré</strong></h6>
-          <p>Guabiruba | SC</p>
-          <p><span class="paw-icon">📍</span> Localização Endereço</p>
+        <div class="info-card text-center bg-white p-4 rounded shadow-sm">
+          <img src="/img/icon-endereco.png" class="d-block mx-auto mb-3" style= "width:100%; max-width: 130px;"alt="">
+          <h6 style="color: #555086"><strong>R. Alberto Reichert, 237 - Aimoré</strong></h6>
+          <p style="color: #555086">Guabiruba | SC</p>
+          <hr>
+          <p><span class="paw-icon" >📍</span> Localização Endereço</p>
         </div>
       </div>
     </div>
