--- a/detalhe.html
+++ b/detalhe.html
@@ -16,7 +16,7 @@
     <div class="container mt-4" >
     <h2 class="text-center fw-bold mb-4" style="color: #7874A4">Achou o seu novo companheiro???</h2>
 
-    <img src="/img/pinpão.png" alt="pinpão" class="shadow mb-5" style= "width:100%; max-width: 1300px;">
+    <img src="/img/cachorros/pinpão.png" alt="pinpão" class="shadow mb-5" style= "width:100%; max-width: 1300px;">
 
     <div class="row mt-4" style="color: #7874A4">
       <div class="col-md-6">
