--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
           class="mt-auto d-flex justify-content-center align-items-center pt-4"
         >
           <button class="btn text-muted">Tela Admin</button>
-          <button class="btn btn-conta-header rounded-pill px-3 py-1">
+          <button
+            class="btn btn-conta bg-purple text-white fw-medium rounded-pill px-3 py-1"
+          >
             <img src="img/icons/user.svg" alt="User" width="22" /> Minha Conta
           </button>
         </div>
@@ -134,7 +136,7 @@
     <!-- Ícones -->
     <div class="container icon-row">
       <div class="row justify-content-center">
-        <div class="col-6 col-sm-2">
+        <div class="col-5 col-sm-4 col-lg-2">
           <a
             class="card icon-card h-100 w-100 text-decoration-none"
             href="catalogo.html"
@@ -148,7 +150,7 @@
           </a>
         </div>
 
-        <div class="col-6 col-sm-2">
+        <div class="col-5 col-sm-4 col-lg-2">
           <a
             class="card icon-card h-100 w-100 text-decoration-none"
             href="catalogo.html"
@@ -157,7 +159,7 @@
             <p>Gatos</p>
           </a>
         </div>
-        <div class="col-6 col-sm-2">
+        <div class="col-5 col-sm-4 col-lg-2 mt-sm-0 mt-3">
           <a
             class="card icon-card h-100 w-100 text-decoration-none"
             href="catalogo.html"
@@ -170,7 +172,7 @@
             <p>Outros Animais</p>
           </a>
         </div>
-        <div class="col-6 col-sm-2">
+        <div class="col-5 col-sm-4 col-lg-2 mt-lg-0 mt-3">
           <a
             class="card icon-card h-100 w-100 text-decoration-none"
             href="catalogo.html"
