--- a/ADM/alteraCadastro.html
+++ b/ADM/alteraCadastro.html
@@ -23,7 +23,7 @@
    <!-- Cabeçalho -->
    <header class="flex items-center justify-between bg-gray-100 border-b border-gray-400 px-4 py-2">
     <div class="flex items-center space-x-2">
-     <img class="w-10 h-10" height="85" src="/img/logo-acapra-roxo.png" width="40"/>
+     <img class="w-10 h-10" height="85" src="../img/logo-acapra-roxo.png" width="40"/>
     </div>
     <button class="flex items-center space-x-2 bg-purple-700 text-white text-xs font-semibold rounded-full px-3 py-1">
      <span class="relative inline-block w-5 h-3 bg-gray-300 rounded-full">
@@ -64,7 +64,7 @@
       </h2>
       <div class="bg-white rounded-lg shadow-md p-6 flex flex-col sm:flex-row sm:justify-between sm:items-center space-y-6 sm:space-y-0 sm:space-x-6 max-w-3xl">
        <div class="flex flex-col items-center space-y-1 w-1/3">
-        <img class="w-10 h-10" height="40" src="/img/pata-preta.png" width="40"/>
+        <img class="w-10 h-10" height="40" src="../img/pata-preta.png" width="40"/>
         <span class="text-xs text-gray-900 font-normal">
          Total Cadastrados
         </span>
