button ver mais

--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@
 
       <div class="container">
         <div class="d-flex flex-wrap gap-3 justify-content-center">
-          <div class="card col-5 col-sm-4 col-lg-2">
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
             <img
               src="img/cachorros/cachorro-pinpao.png"
               class="card-img-top"
@@ -206,9 +209,12 @@
             <div class="card-footer-custom">
               <h4 class="text-subtitle fw-medium m-0">Pinpão</h4>
             </div>
-          </div>
+          </a>
 
-          <div class="card col-5 col-sm-4 col-lg-2">
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
             <img
               src="img/cachorros/cachorro-bela.png"
               class="card-img-top"
@@ -217,9 +223,12 @@
             <div class="card-footer-custom">
               <h4 class="text-subtitle fw-medium m-0">Bela</h4>
             </div>
-          </div>
+          </a>
 
-          <div class="card col-5 col-sm-4 col-lg-2">
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
             <img
               src="img/cachorros/cachorro-zeus.png"
               class="card-img-top"
@@ -228,9 +237,12 @@
             <div class="card-footer-custom">
               <h4 class="text-subtitle fw-medium m-0">Zeus</h4>
             </div>
-          </div>
+          </a>
 
-          <div class="card col-5 col-sm-4 col-lg-2">
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
             <img
               src="img/cachorros/cachorro-leandro.png"
               class="card-img-top"
@@ -239,22 +251,37 @@
             <div class="card-footer-custom">
               <h4 class="text-subtitle fw-medium m-0">Leandro</h4>
             </div>
-          </div>
+          </a>
 
-          <div class="card col-5 col-sm-4 col-lg-2">
-            <img src="img/pinpãoCard.jpg" class="card-img-top" alt="Pinpão" />
-            <div class="card-footer-custom">
-              <h4 class="text-subtitle fw-medium m-0">Ver mais fazer</h4>
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
+            <div
+              class="card-img-top d-flex justify-content-center align-items-center bg-purple border-bottom"
+            >
+              <img
+                src="img/icons/pata-branca.svg"
+                class="bg-purple"
+                alt="Pata"
+                width="50%"
+              />
             </div>
-          </div>
+            <div
+              class="h-25 d-flex justify-content-center align-items-center bg-purple"
+            >
+              <h4 class="text-white fw-medium m-0">Ver mais</h4>
+            </div>
+          </a>
         </div>
       </div>
     </div>
 
+    <!-- Cards de Planejamento -->
     <div class="text-center my-4 bg-gray p-5">
       <h1 class="text-title">Planejando adotar um PET?</h1>
-      <div class="d-flex justify-content-around my-5">
-        <div class="w-25">
+      <div class="d-flex row justify-content-around my-5">
+        <div class="col-8 col-sm-4 col-lg-2">
           <img src="img/icons/cachorroLinha.svg" style="width: 50px" alt="" />
           <h2 class="text-title">Localize o melhor tipo de PET para você!</h2>
           <p class="text-subtitle fw-medium">
@@ -262,7 +289,7 @@
             estadia ou de vida!
           </p>
         </div>
-        <div class="w-25">
+        <div class="col-8 col-sm-4 col-lg-2">
           <img src="img/icons/dog-seatting.svg" style="width: 50px" alt="" />
           <h2 class="text-title">Qual a idade do cachorro em anos humanos?</h2>
           <p class="text-subtitle fw-medium">
@@ -270,7 +297,7 @@
             vice-versa. Finalmente responda quantos anos seu cão tem!
           </p>
         </div>
-        <div class="w-25">
+        <div class="col-8 col-sm-4 col-lg-2">
           <img src="img/icons/bonecos.svg" style="width: 50px" alt="" />
           <h2 class="text-title">
             Perguntas frequentes sobre adoção de animais...
