--- a/index.html
+++ b/index.html
@@ -310,6 +310,174 @@
       </div>
     </div>
 
+    <!-- Cards de Pets perto de você -->
+    <div class="container container-pets text-center my-5">
+      <h1 class="text-title mb-5">Pets disponíves perto de você...></h1>
+
+      <div class="container">
+        <div class="d-flex flex-wrap gap-3 justify-content-center">
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
+            <img
+              src="img/cachorros/cachorro-pipolo.png"
+              class="card-img-top"
+              alt="Pipolo"
+            />
+            <div class="card-footer-custom">
+              <h4 class="text-subtitle fw-medium m-0">Pipolo</h4>
+            </div>
+          </a>
+
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
+            <img
+              src="img/cachorros/cachorro-nuna.png"
+              class="card-img-top"
+              alt="Nuna"
+            />
+            <div class="card-footer-custom">
+              <h4 class="text-subtitle fw-medium m-0">Nuna</h4>
+            </div>
+          </a>
+
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
+            <img
+              src="img/cachorros/cachorro-lola.png"
+              class="card-img-top"
+              alt="Lola"
+            />
+            <div class="card-footer-custom">
+              <h4 class="text-subtitle fw-medium m-0">Lola</h4>
+            </div>
+          </a>
+
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
+            <img
+              src="img/cachorros/gato-mel.png"
+              class="card-img-top"
+              alt="Mel"
+            />
+            <div class="card-footer-custom">
+              <h4 class="text-subtitle fw-medium m-0">Mel</h4>
+            </div>
+          </a>
+
+          <a
+            class="card col-5 col-sm-4 col-lg-2 text-decoration-none"
+            href="detalhe.html"
+          >
+            <div
+              class="card-img-top d-flex justify-content-center align-items-center bg-purple border-bottom"
+            >
+              <img
+                src="img/icons/pata-branca.svg"
+                class="bg-purple"
+                alt="Pata"
+                width="50%"
+              />
+            </div>
+            <div
+              class="h-25 d-flex justify-content-center align-items-center bg-purple"
+            >
+              <h4 class="text-white fw-medium m-0">Ver mais</h4>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card obrigado -->
+    <div class="container text-center">
+      <img src="img/muito-obrigado.jpg" alt="" />
+    </div>
+
+    <!-- Footer -->
+    <footer class="text-white py-5 bg-purple">
+      <div class="container">
+        <div class="row text-center text-md-start">
+          <!-- Logo -->
+          <div
+            class="col-md-3 mb-4 mb-md-0 d-flex flex-column align-items-md-start align-items-center"
+          >
+            <div
+              class="bg-white rounded p-1 d-flex justify-content-center"
+              style="width: 80px; height: 80px"
+            >
+              <img
+                src="img/logoRoxa.svg"
+                alt="Logo ACAPRA"
+                style="max-width: 100%; max-height: 100%"
+              />
+            </div>
+          </div>
+
+          <!-- Cadastro -->
+          <div class="col-md-3">
+            <h6 class="fw-bold">Cadastre-se</h6>
+            <p class="mb-1">
+              Faça parte da família<br /><strong>ACAPRA</strong> e colabore!
+            </p>
+            <a href="#" class="btn btn-light btn-sm px-4 mt-2 rounded-pill"
+              >Inscrever-se</a
+            >
+          </div>
+
+          <!-- Sobre nós -->
+          <div class="col-md-3 mt-3 mt-md-0">
+            <h6 class="fw-bold">Sobre nós</h6>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#" class="text-white text-decoration-none">ACAPRA</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Contato -->
+          <div class="col-md-3">
+            <h6 class="fw-bold">Contato</h6>
+            <ul class="list-unstyled">
+              <li>
+                <a
+                  href="tel:+5547999999999"
+                  class="text-white text-decoration-none"
+                  ><strong>(47)</strong> 99999-9999</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:acaprabrusquese@gmail.com"
+                  class="text-white text-decoration-none"
+                  >acaprabrusque@gmail.com</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Linha divisória -->
+        <hr class="border-white mt-4 mb-3" />
+
+        <!-- Redes sociais -->
+        <div class="d-flex justify-content-center gap-4">
+          <a href="#" class="text-white fs-5"><i class="bi bi-whatsapp"></i></a>
+          <a href="#" class="text-white fs-5"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="text-white fs-5"
+            ><i class="bi bi-instagram"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
