--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     </div>
 
     <!-- Card obrigado -->
-    <div class="container text-center">
+    <div class="container text-center mb-5">
       <img src="img/muito-obrigado.jpg" alt="" />
     </div>
 
