--- a/ADM/finalizaCadastro.html
+++ b/ADM/finalizaCadastro.html
@@ -4,8 +4,130 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finaliza Cadastro</title>
-</head>
-<body>
-    
+<link rel="stylesheet" href="/style/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar px-4 px-lg-5 bg-white border-bottom shadow-sm">
+      <div
+        class="container-fluid px-lg-4 d-flex justify-content-between align-items-center"
+      >
+        <!-- Logo -->
+        <a class="navbar-brand" href="/index.html">
+          <img src="../img/logoRoxa.svg" alt="Logo" width="50" />
+        </a>
+
+        <!-- Tela Admin + Minha Conta -->
+        <div class="d-none d-lg-flex align-items-center">
+          <button class="btn text-muted">Tela Admin</button>
+          <div class="vr mx-2 d-none d-md-block"></div>
+          <button
+            class="btn btn-conta bg-purple text-white fw-medium rounded-pill px-3 py-1"
+          >
+            <img src="../img/icons/user.svg" alt="User" width="22" /> Minha Conta
+          </button>
+        </div>
+
+        <!-- Botão Offcanvas -->
+        <button
+          class="navbar-toggler d-lg-none d-flex"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+
+    <!-- Menu Navbar com Offcanvas -->
+    <nav class="navbar navbar-expand-lg bg-purple">
+      <div class="container-fluid px-4">
+        <!-- Menu em telas grandes -->
+        <div
+          class="collapse navbar-collapse justify-content-center d-none d-lg-flex"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="/catalogo.html"
+                >Adote ou Colabore</a
+              >
+            </li>
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="/catalogo.html"
+                >Cachorros</a
+              >
+            </li>
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="/catalogo.html"
+                >Gatos e Utilitários</a
+              >
+            </li>
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="/catalogo.html"
+                >Outros tipos de PET</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Offcanvas Mobile Menu -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title">Menu</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Fechar"
+        ></button>
+      </div>
+      <div class="offcanvas-body d-flex flex-column">
+        <ul class="navbar-nav text-black">
+          <li class="nav-item px-2">
+            <a class="nav-link" href="/catalogo.html">Adote ou Colabore</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="/catalogo.html">Cachorros</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="/catalogo.html">Gatos e Utilitários</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="/catalogo.html">Outros tipos de PET</a>
+          </li>
+        </ul>
+        <div
+          class="mt-auto d-flex justify-content-center align-items-center pt-4"
+        >
+          <button class="btn text-muted">Tela Admin</button>
+          <button
+            class="btn btn-conta bg-purple text-white fw-medium rounded-pill px-3 py-1"
+          >
+            <img src="/img/icons/user.svg" alt="User" width="22" /> Minha Conta
+          </button>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
