ajuste de responsividade

--- a/detalhe.html
+++ b/detalhe.html
@@ -132,7 +132,7 @@
       </h2>
 
       <img
-        src="/img/cachorros/pinpão.png"
+        src="img/cachorros/pinpão.png"
         alt="pinpão"
         class="shadow mb-5"
         style="width: 100%; max-width: 1300px"
@@ -187,19 +187,22 @@
         </div>
       </div>
 
-      <div class="row mt-4">
-        <div class="col-md-6">
+      <div class="row my-5 d-flex justify-content-center gap-4 gap-md-0">
+        <div class="col-10 col-md-6">
           <div class="footer-box">
-            <img src="/img/como-faco-pra-adotar.png" class="d-block mx-auto" />
+            <img
+              src="img/como-faco-pra-adotar.png"
+              class="d-block mx-auto w-100"
+            />
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-10 col-md-6">
           <div class="info-card text-center bg-white p-4 rounded shadow-sm">
             <img
-              src="/img/icon-endereco.png"
+              src="img/icon-endereco.png"
               class="d-block mx-auto mb-3"
-              style="width: 100%; max-width: 130px"
+              style="width: auto"
               alt=""
             />
             <h6 style="color: #555086">
