Telas ADM finalizadas

--- a/formulario.html
+++ b/formulario.html
@@ -401,7 +401,10 @@
             style="max-width: 380px"
           />
         </div>
-      </div>
+            <div class="col-12">
+                <button class="btn btn-primary bg-purple" type="submit">Gravar</button>
+            </div>
+        </div>
     </div>
 
     <footer class="text-white py-5 bg-purple">
@@ -465,6 +468,7 @@
             </ul>
           </div>
         </div>
+        
 
         <!-- Linha divisória -->
         <hr class="border-white mt-4 mb-3" />
