--- a/ADM/alteraCadastro.html
+++ b/ADM/alteraCadastro.html
@@ -1,11 +1,10 @@
-<html lang="pt-BR">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   ACAPRA - Alteração de Cadastro
-  </title>
-  <link rel="stylesheet" href="/style/style.css" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alterar Cadastro do PET</title>
+<link rel="stylesheet" href="/style/style.css"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -130,5 +129,64 @@
         </div>
       </div>
     </div>
- </body>
+    
+    <!-- Formulário -->
+     <div class="d-flex pt-5 justify-content-center align-items min-vh-100 bg-light">
+    <div class="p-4 rounded shadow bg-white" style="width: 100%; max-width: 700px; max-height: 400px;">
+      <h5>Altere o Cadastro do PET<h5>
+    <form class="row g-3 needs-validation" novalidate>
+  <div class="col-md-4">
+    <label for="validationCustom01" class="form-label">Nome do PET:</label>
+    <input type="text" class="form-control" id="validationCustom01" required>
+  </div>
+  <div class="col-md-4">
+    <label for="validationCustom02" class="form-label">Raça:</label>
+    <input type="text" class="form-control" id="validationCustom02" required>
+  </div>
+  <div class="col-md-4">
+    <label for="inputState" class="form-label">Porte</label>
+    <select id="inputState" class="form-select">
+      <option value=""></option>
+      <option>Grande</option>
+      <option>Médio</option>
+      <option>Pequeno</option>
+    </select>
+  </div>
+  <div class="col-md-4">
+    <label for="inputState" class="form-label">Idade:</label>
+    <select id="inputState" class="form-select">
+      <option value=""></option>
+      <option>0 até 1</option>
+      <option>1 até 5</option>
+      <option>5 até 8</option>
+      <option>8+</option>
+    </select>
+  </div>
+  <div class="col-md-4">
+    <label for="inputState" class="form-label">Saúde:</label>
+    <select id="inputState" class="form-select">
+      <option value=""></option>
+      <option>Boa</option>
+      <option>Precisa de atenção!</option>
+      <option>Ruim</option>
+    </select>
+  </div>
+  <div class="col-md-4">
+    <label for="validationCustom01" class="form-label">Observações:</label>
+    <input type="text" class="form-control" id="validationCustom01" required>
+  </div>
+  <div class="mb-3">
+    <label for="formFile" class="form-label">Envie as fotos do PET pet por aqui:</label>
+    <input
+      class="form-control"
+      type="file"
+      id="formFile"
+      style="max-width: 380px"
+      />
+  </div>
+  <div class="col-12">
+    <a class="btn btn-primary bg-purple" type="submit" href="finalizaCadastro.html">Gravar</a>
+  </div>
+</form>
+</body>
 </html>
