--- a/ADM/cadastroPet.html
+++ b/ADM/cadastroPet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro PET</title>
-<link rel="stylesheet" href="/style/style.css" />
+<link rel="stylesheet" href="/style/style.css"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -131,68 +131,61 @@
     </div>
     
     <!-- Formulário -->
+     <div class="d-flex pt-5 justify-content-center align-items min-vh-100 bg-light">
+    <div class="p-4 rounded shadow bg-white" style="width: 100%; max-width: 700px; max-height: 400px;">
+      <h5>Cadastre um novo PET</h5>
     <form class="row g-3 needs-validation" novalidate>
   <div class="col-md-4">
     <label for="validationCustom01" class="form-label">Nome do PET:</label>
     <input type="text" class="form-control" id="validationCustom01" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
   </div>
   <div class="col-md-4">
-    <label for="validationCustom02" class="form-label">Last name</label>
-    <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-    <div class="valid-feedback">
-      Looks good!
-    </div>
+    <label for="validationCustom02" class="form-label">Raça:</label>
+    <input type="text" class="form-control" id="validationCustom02" required>
   </div>
   <div class="col-md-4">
-    <label for="validationCustomUsername" class="form-label">Username</label>
-    <div class="input-group has-validation">
-      <span class="input-group-text" id="inputGroupPrepend">@</span>
-      <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-      <div class="invalid-feedback">
-        Please choose a username.
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <label for="validationCustom03" class="form-label">City</label>
-    <input type="text" class="form-control" id="validationCustom03" required>
-    <div class="invalid-feedback">
-      Please provide a valid city.
-    </div>
-  </div>
-  <div class="col-md-3">
-    <label for="validationCustom04" class="form-label">State</label>
-    <select class="form-select" id="validationCustom04" required>
-      <option selected disabled value="">Choose...</option>
-      <option>...</option>
+    <label for="inputState" class="form-label">Porte</label>
+    <select id="inputState" class="form-select">
+      <option value=""></option>
+      <option>Grande</option>
+      <option>Médio</option>
+      <option>Pequeno</option>
     </select>
-    <div class="invalid-feedback">
-      Please select a valid state.
-    </div>
   </div>
-  <div class="col-md-3">
-    <label for="validationCustom05" class="form-label">Zip</label>
-    <input type="text" class="form-control" id="validationCustom05" required>
-    <div class="invalid-feedback">
-      Please provide a valid zip.
-    </div>
+  <div class="col-md-4">
+    <label for="inputState" class="form-label">Idade:</label>
+    <select id="inputState" class="form-select">
+      <option value=""></option>
+      <option>0 até 1</option>
+      <option>1 até 5</option>
+      <option>5 até 8</option>
+      <option>8+</option>
+    </select>
+  </div>
+  <div class="col-md-4">
+    <label for="inputState" class="form-label">Saúde:</label>
+    <select id="inputState" class="form-select">
+      <option value=""></option>
+      <option>Boa</option>
+      <option>Precisa de atenção!</option>
+      <option>Ruim</option>
+    </select>
+  </div>
+  <div class="col-md-4">
+    <label for="validationCustom01" class="form-label">Observações:</label>
+    <input type="text" class="form-control" id="validationCustom01" required>
+  </div>
+  <div class="mb-3">
+    <label for="formFile" class="form-label">Envie as fotos do PET pet por aqui:</label>
+    <input
+      class="form-control"
+      type="file"
+      id="formFile"
+      style="max-width: 380px"
+      />
   </div>
   <div class="col-12">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-      <label class="form-check-label" for="invalidCheck">
-        Agree to terms and conditions
-      </label>
-      <div class="invalid-feedback">
-        You must agree before submitting.
-      </div>
-    </div>
-  </div>
-  <div class="col-12">
-    <button class="btn btn-primary" type="submit">Submit form</button>
+    <a class="btn btn-primary bg-purple" type="submit" href="finalizaCadastro.html">Gravar</a>
   </div>
 </form>
 </body>
