--- a/ADM/finalizaCadastro.html
+++ b/ADM/finalizaCadastro.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finaliza Cadastro</title>
-<link rel="stylesheet" href="/style/style.css" />
+    <title>Alterar Cadastro do PET</title>
+<link rel="stylesheet" href="/style/style.css"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -129,5 +129,19 @@
         </div>
       </div>
     </div>
+    
+    <!-- Formulário -->
+     <div class="d-flex pt-5 justify-content-center align-items min-vh-100 bg-light">
+    <div class="p-4 rounded shadow bg-white" style="width: 100%; max-width: 700px; max-height: 400px; text-align: center;">
+      <h5>Cadastro Feito!<h5>
+        <br>
+  <div class="col-12">
+    <a class="btn btn-primary bg-purple" type="submit" href="telaAdmDash.html">Voltar para o Dashboard</a>
+  </div>
+  <br>
+  <div class="col-12">
+    <a class="btn btn-primary bg-purple" type="submit" href="TelaAdmCadastros.html">Voltar para os Cadastros</a>
+  </div>
+</form>
 </body>
 </html>
